# dj-track-organizer

./: .gitignore  CHANGELOG.md  LIBRARY_HEALTH_DASHBOARD_SPEC.md  README.md  release-please-config.json
.claude/: launch.json
.github/workflows/: ci.yml  release.yml
app/: .prettierignore  Cargo.toml  index.html  package-lock.json  package.json  vite.config.ts
app/core/: Cargo.toml
app/core/examples/: bench.rs
app/core/src/: csvio.rs  dedup.rs  health.rs  lib.rs  normalize.rs  parallel.rs  rekordbox.rs  retry.rs  tagging.rs
app/core/tests/: dedup_parity.rs  normalize_parity.rs  rekordbox_dedup_parity.rs  rekordbox_realdb_parity.rs  rekordbox_synthetic.rs  tagging_parity.rs
app/core/tests/fixtures/: csv_plan_expected.csv  csv_rollback_expected.csv  dedup_scenarios.json  normalize_build_name.json  normalize_build_plan.json  synthetic_masterdb.sql  tagging_manifest.json
app/core/tests/fixtures/tagging/: aiff_mid_id3.in  aiff_mid_id3.out  aiff_plain.in  aiff_plain.out  aiff_trailing_id3.in  aiff_trailing_id3.out  mp3_big_id3.in  mp3_big_id3.out  mp3_id3_footer.in  mp3_id3_footer.out  mp3_no_id3.in  mp3_no_id3.out  mp3_small_id3.in  mp3_small_id3.out  wav_empty_info_tail.in  wav_empty_info_tail.out  wav_info_before_data.in  wav_info_before_data.out  wav_junk_smpl.in  wav_junk_smpl.out  wav_no_artist.in  wav_no_artist.out  wav_old_info_id3.in  wav_old_info_id3.out  wav_plain.in  wav_plain.out
app/src/: bridge.ts  main.ts  style.css
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
skills/dedup-tracks/: SKILL.md
skills/normalize-music-filenames/: SKILL.md
skills/rekordbox-sync/: SKILL.md
tools/: gen_fixtures.py  rb_dedup_oracle.py
(+8 files in other folders)
