[package]
name = "organizer-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Core library for the DJ Track Organizer desktop app: filename normalization, tagging, Rekordbox relinking and dedup"

[features]
default = ["rekordbox"]
# Rekordbox master.db access sits behind a feature so the pure-logic modules
# (normalize/tagging/dedup) can build and test without the SQLCipher toolchain.
rekordbox = ["dep:rbox", "dep:diesel"]

[dependencies]
regex = "1"
unicode-normalization = "0.1"
unicode-properties = "0.1"
lofty = "0.22"
sha1 = "0.10"
blake3 = "1"
rayon = "1"
csv = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
thiserror = "2"
rbox = { version = "0.1.7", default-features = false, features = ["master-db", "bundled-vendored-openssl"], optional = true }
# raw row ops (repoint/delete) against rbox's own schema; same diesel as rbox
diesel = { version = "2.3", features = ["sqlite"], optional = true }

[dev-dependencies]
tempfile = "3"
