# SPDX-License-Identifier: GPL-3.0-only
[package]
name = "track-organizer"
version = "0.1.0"
description = "One-click DJ library organizer: normalize, tag, Rekordbox sync, dedup"
edition.workspace = true
license.workspace = true

[lib]
name = "track_organizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
organizer-core = { path = "../core" }
rfd = "0.15"
